--- a/test/position.html
+++ b/test/position.html
@@ -4,7 +4,7 @@
   <title>wow-tabs[position] tests</title>
   <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
   <link rel="import" href="../wowtabs.html">
-  <link rel="import" href="./mocha-test.html">
+  <link rel="import" href="../node_modules/mocha-test/mocha-test.html">
 </head>
 <body>
 <wow-tabs>
